src/vlp/vlpLibYacc.output
Grammar

    0 $accept: source_text $end

    1 @1: /* empty */

    2 source_text: LIBLIBRARY '(' LIBID ')' @1 '{' library_item '}'

    3 library_item: cell_item
    4             | library_item cell_item

    5 @2: /* empty */

    6 cell_item: LIBCELL '(' LIBID ')' @2 '{' statement_list '}'

    7 statement_list: statement
    8               | statement_list statement

    9 statement: pin_statement

   10 @3: /* empty */

   11 pin_statement: LIBPIN '(' LIBID ')' @3 '{' pin_item_list '}'

   12 pin_item_list: pin_item
   13              | pin_item_list pin_item

   14 pin_item: function
   15         | direction

   16 function: LIBFUNCTION ':' '"' expression '"' ';'

   17 direction: LIBDIRECTION ':' iotype ';'

   18 iotype: LIBINPUT
   19       | LIBOUTPUT
   20       | LIBINOUT

   21 expression: primary_list
   22           | expression '''
   23           | '(' expression ')'

   24 @4: /* empty */

   25 expression: expression '+' @4 expression

   26 primary_list: /* empty */
   27             | primary_list primary

   28 primary: LIBID


Terminals, with rules where they appear

$end (0) 0
'"' (34) 16
''' (39) 22
'(' (40) 2 6 11 23
')' (41) 2 6 11 23
'+' (43) 25
':' (58) 16 17
';' (59) 16 17
'{' (123) 2 6 11
'}' (125) 2 6 11
error (256)
LIBID (258) 2 6 11 28
LIBLIBRARY (259) 2
LIBCELL (260) 6
LIBPIN (261) 11
LIBFUNCTION (262) 16
LIBDIRECTION (263) 17
LIBINPUT (264) 18
LIBOUTPUT (265) 19
LIBINOUT (266) 20


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
source_text (22)
    on left: 2, on right: 0
@1 (23)
    on left: 1, on right: 2
library_item (24)
    on left: 3 4, on right: 2 4
cell_item (25)
    on left: 6, on right: 3 4
@2 (26)
    on left: 5, on right: 6
statement_list (27)
    on left: 7 8, on right: 6 8
statement (28)
    on left: 9, on right: 7 8
pin_statement (29)
    on left: 11, on right: 9
@3 (30)
    on left: 10, on right: 11
pin_item_list (31)
    on left: 12 13, on right: 11 13
pin_item (32)
    on left: 14 15, on right: 12 13
function (33)
    on left: 16, on right: 14
direction (34)
    on left: 17, on right: 15
iotype (35)
    on left: 18 19 20, on right: 17
expression (36)
    on left: 21 22 23 25, on right: 16 22 23 25
@4 (37)
    on left: 24, on right: 25
primary_list (38)
    on left: 26 27, on right: 21 27
primary (39)
    on left: 28, on right: 27


state 0

    0 $accept: . source_text $end

    LIBLIBRARY  shift, and go to state 1

    source_text  go to state 2


state 1

    2 source_text: LIBLIBRARY . '(' LIBID ')' @1 '{' library_item '}'

    '('  shift, and go to state 3


state 2

    0 $accept: source_text . $end

    $end  shift, and go to state 4


state 3

    2 source_text: LIBLIBRARY '(' . LIBID ')' @1 '{' library_item '}'

    LIBID  shift, and go to state 5


state 4

    0 $accept: source_text $end .

    $default  accept


state 5

    2 source_text: LIBLIBRARY '(' LIBID . ')' @1 '{' library_item '}'

    ')'  shift, and go to state 6


state 6

    2 source_text: LIBLIBRARY '(' LIBID ')' . @1 '{' library_item '}'

    $default  reduce using rule 1 (@1)

    @1  go to state 7


state 7

    2 source_text: LIBLIBRARY '(' LIBID ')' @1 . '{' library_item '}'

    '{'  shift, and go to state 8


state 8

    2 source_text: LIBLIBRARY '(' LIBID ')' @1 '{' . library_item '}'

    LIBCELL  shift, and go to state 9

    library_item  go to state 10
    cell_item     go to state 11


state 9

    6 cell_item: LIBCELL . '(' LIBID ')' @2 '{' statement_list '}'

    '('  shift, and go to state 12


state 10

    2 source_text: LIBLIBRARY '(' LIBID ')' @1 '{' library_item . '}'
    4 library_item: library_item . cell_item

    LIBCELL  shift, and go to state 9
    '}'      shift, and go to state 13

    cell_item  go to state 14


state 11

    3 library_item: cell_item .

    $default  reduce using rule 3 (library_item)


state 12

    6 cell_item: LIBCELL '(' . LIBID ')' @2 '{' statement_list '}'

    LIBID  shift, and go to state 15


state 13

    2 source_text: LIBLIBRARY '(' LIBID ')' @1 '{' library_item '}' .

    $default  reduce using rule 2 (source_text)


state 14

    4 library_item: library_item cell_item .

    $default  reduce using rule 4 (library_item)


state 15

    6 cell_item: LIBCELL '(' LIBID . ')' @2 '{' statement_list '}'

    ')'  shift, and go to state 16


state 16

    6 cell_item: LIBCELL '(' LIBID ')' . @2 '{' statement_list '}'

    $default  reduce using rule 5 (@2)

    @2  go to state 17


state 17

    6 cell_item: LIBCELL '(' LIBID ')' @2 . '{' statement_list '}'

    '{'  shift, and go to state 18


state 18

    6 cell_item: LIBCELL '(' LIBID ')' @2 '{' . statement_list '}'

    LIBPIN  shift, and go to state 19

    statement_list  go to state 20
    statement       go to state 21
    pin_statement   go to state 22


state 19

   11 pin_statement: LIBPIN . '(' LIBID ')' @3 '{' pin_item_list '}'

    '('  shift, and go to state 23


state 20

    6 cell_item: LIBCELL '(' LIBID ')' @2 '{' statement_list . '}'
    8 statement_list: statement_list . statement

    LIBPIN  shift, and go to state 19
    '}'     shift, and go to state 24

    statement      go to state 25
    pin_statement  go to state 22


state 21

    7 statement_list: statement .

    $default  reduce using rule 7 (statement_list)


state 22

    9 statement: pin_statement .

    $default  reduce using rule 9 (statement)


state 23

   11 pin_statement: LIBPIN '(' . LIBID ')' @3 '{' pin_item_list '}'

    LIBID  shift, and go to state 26


state 24

    6 cell_item: LIBCELL '(' LIBID ')' @2 '{' statement_list '}' .

    $default  reduce using rule 6 (cell_item)


state 25

    8 statement_list: statement_list statement .

    $default  reduce using rule 8 (statement_list)


state 26

   11 pin_statement: LIBPIN '(' LIBID . ')' @3 '{' pin_item_list '}'

    ')'  shift, and go to state 27


state 27

   11 pin_statement: LIBPIN '(' LIBID ')' . @3 '{' pin_item_list '}'

    $default  reduce using rule 10 (@3)

    @3  go to state 28


state 28

   11 pin_statement: LIBPIN '(' LIBID ')' @3 . '{' pin_item_list '}'

    '{'  shift, and go to state 29


state 29

   11 pin_statement: LIBPIN '(' LIBID ')' @3 '{' . pin_item_list '}'

    LIBFUNCTION   shift, and go to state 30
    LIBDIRECTION  shift, and go to state 31

    pin_item_list  go to state 32
    pin_item       go to state 33
    function       go to state 34
    direction      go to state 35


state 30

   16 function: LIBFUNCTION . ':' '"' expression '"' ';'

    ':'  shift, and go to state 36


state 31

   17 direction: LIBDIRECTION . ':' iotype ';'

    ':'  shift, and go to state 37


state 32

   11 pin_statement: LIBPIN '(' LIBID ')' @3 '{' pin_item_list . '}'
   13 pin_item_list: pin_item_list . pin_item

    LIBFUNCTION   shift, and go to state 30
    LIBDIRECTION  shift, and go to state 31
    '}'           shift, and go to state 38

    pin_item   go to state 39
    function   go to state 34
    direction  go to state 35


state 33

   12 pin_item_list: pin_item .

    $default  reduce using rule 12 (pin_item_list)


state 34

   14 pin_item: function .

    $default  reduce using rule 14 (pin_item)


state 35

   15 pin_item: direction .

    $default  reduce using rule 15 (pin_item)


state 36

   16 function: LIBFUNCTION ':' . '"' expression '"' ';'

    '"'  shift, and go to state 40


state 37

   17 direction: LIBDIRECTION ':' . iotype ';'

    LIBINPUT   shift, and go to state 41
    LIBOUTPUT  shift, and go to state 42
    LIBINOUT   shift, and go to state 43

    iotype  go to state 44


state 38

   11 pin_statement: LIBPIN '(' LIBID ')' @3 '{' pin_item_list '}' .

    $default  reduce using rule 11 (pin_statement)


state 39

   13 pin_item_list: pin_item_list pin_item .

    $default  reduce using rule 13 (pin_item_list)


state 40

   16 function: LIBFUNCTION ':' '"' . expression '"' ';'

    '('  shift, and go to state 45

    $default  reduce using rule 26 (primary_list)

    expression    go to state 46
    primary_list  go to state 47


state 41

   18 iotype: LIBINPUT .

    $default  reduce using rule 18 (iotype)


state 42

   19 iotype: LIBOUTPUT .

    $default  reduce using rule 19 (iotype)


state 43

   20 iotype: LIBINOUT .

    $default  reduce using rule 20 (iotype)


state 44

   17 direction: LIBDIRECTION ':' iotype . ';'

    ';'  shift, and go to state 48


state 45

   23 expression: '(' . expression ')'

    '('  shift, and go to state 45

    $default  reduce using rule 26 (primary_list)

    expression    go to state 49
    primary_list  go to state 47


state 46

   16 function: LIBFUNCTION ':' '"' expression . '"' ';'
   22 expression: expression . '''
   25           | expression . '+' @4 expression

    '+'  shift, and go to state 50
    '''  shift, and go to state 51
    '"'  shift, and go to state 52


state 47

   21 expression: primary_list .
   27 primary_list: primary_list . primary

    LIBID  shift, and go to state 53

    $default  reduce using rule 21 (expression)

    primary  go to state 54


state 48

   17 direction: LIBDIRECTION ':' iotype ';' .

    $default  reduce using rule 17 (direction)


state 49

   22 expression: expression . '''
   23           | '(' expression . ')'
   25           | expression . '+' @4 expression

    '+'  shift, and go to state 50
    '''  shift, and go to state 51
    ')'  shift, and go to state 55


state 50

   25 expression: expression '+' . @4 expression

    $default  reduce using rule 24 (@4)

    @4  go to state 56


state 51

   22 expression: expression ''' .

    $default  reduce using rule 22 (expression)


state 52

   16 function: LIBFUNCTION ':' '"' expression '"' . ';'

    ';'  shift, and go to state 57


state 53

   28 primary: LIBID .

    $default  reduce using rule 28 (primary)


state 54

   27 primary_list: primary_list primary .

    $default  reduce using rule 27 (primary_list)


state 55

   23 expression: '(' expression ')' .

    $default  reduce using rule 23 (expression)


state 56

   25 expression: expression '+' @4 . expression

    '('  shift, and go to state 45

    $default  reduce using rule 26 (primary_list)

    expression    go to state 58
    primary_list  go to state 47


state 57

   16 function: LIBFUNCTION ':' '"' expression '"' ';' .

    $default  reduce using rule 16 (function)


state 58

   22 expression: expression . '''
   25           | expression . '+' @4 expression
   25           | expression '+' @4 expression .

    '''  shift, and go to state 51

    $default  reduce using rule 25 (expression)
